--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "obs-study-apps",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "glib:js": "nx g lib --publishable --buildable --js"
+  },
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -15,8 +17,12 @@
     "@nrwl/next": "^15.7.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.7.2",
+    "@nrwl/rollup": "15.7.2",
     "@nrwl/workspace": "15.7.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.1.2",
     "@swc/core": "^1.2.173",
+    "@swc/helpers": "~0.4.11",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
@@ -40,6 +46,7 @@
     "nx": "15.7.2",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "swc-loader": "0.1.15",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
@@ -48,6 +55,7 @@
     "@emotion/react": "11.10.5",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.5",
+    "@mui/material": "^5.11.10",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
