--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.5",
     "@mui/material": "^5.11.10",
+    "axios": "^1.3.3",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
