--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@emotion/styled": "11.10.5",
     "@mui/material": "^5.11.10",
     "next": "13.1.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
