--- a/libs/language-select/.babelrc
+++ b/libs/language-select/.babelrc
@@ -3,14 +3,10 @@
     [
       "@nrwl/next/babel",
       {
-        "preset-react": {
-          "runtime": "automatic",
-          "importSource": "@emotion/react"
-        }
+        "runtime": "automatic",
+        "useBuiltIns": "usage"
       }
     ]
   ],
-  "plugins": [
-    "@emotion/babel-plugin"
-  ]
+  "plugins": []
 }
