--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ Thumbs.db
 .next
 
 # PWA files
-**/public/sw.js
+# **/public/sw.js
 **/public/workbox-*.js
 **/public/worker-*.js
 **/public/sw.js.map
