--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.0.0",
   "license": "MIT",
   "description": "OBS Study App",
-  "main": "./apps/obs-study/electron/main.js",
+  "main": "./dist/apps/obs-study/exported/main.js",
   "scripts": {
     "glib:js": "nx g lib --publishable --buildable --js",
     "export:obs-study": "nx export obs-study",
-    "start:electron": "electron ."
+    "dev": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn:electron\"",
+    "electron": "wait-on tcp:3000 && electron .",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "start:obs-study": "yarn export:obs-study && yarn start:electron",
+    "start:electron": "electron ./dist/apps/obs-study/exported"
   },
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@electron-forge/cli": "^6.0.5",
+    "@electron-forge/maker-deb": "^6.0.5",
+    "@electron-forge/maker-rpm": "^6.0.5",
+    "@electron-forge/maker-squirrel": "^6.0.5",
+    "@electron-forge/maker-zip": "^6.0.5",
     "@emotion/babel-plugin": "11.10.5",
     "@nrwl/cypress": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
@@ -62,12 +73,17 @@
     "@emotion/styled": "11.10.5",
     "@mui/material": "^5.11.10",
     "axios": "^1.3.3",
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
+    "electron-squirrel-startup": "^1.0.0",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "wait-on": "^7.0.1"
   }
 }
