--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@emotion/react": "11.10.5",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "axios": "^1.3.3",
     "jszip": "^3.10.1",
